<android.support.v4.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/home_activity_home_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/home_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/home_activity_home_constraint_layout_background_color">

		<ImageView
			android:id="@+id/icon_shape_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/home_activity_icon_shape_image_view_margin_start"
			android:layout_marginTop="@dimen/home_activity_icon_shape_image_view_margin_top"
			android:scaleType="center"
			android:src="@drawable/icon_shape"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="30dp"
			tools:layout_editor_absoluteY="70dp"/>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/view_constraint_layout"
			android:layout_width="@dimen/home_activity_view_constraint_layout_width"
			android:layout_height="@dimen/home_activity_view_constraint_layout_height"
			android:layout_marginEnd="@dimen/home_activity_view_constraint_layout_margin_end"
			android:layout_marginTop="@dimen/home_activity_view_constraint_layout_margin_top"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="314dp"
			tools:layout_editor_absoluteY="47dp">

			<ImageView
				android:id="@+id/oval_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/oval"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp"/>

			<View
				android:id="@+id/oval_constraint_layout"
				android:layout_width="@dimen/home_activity_oval_constraint_layout_width"
				android:layout_height="@dimen/home_activity_oval_constraint_layout_height"
				android:layout_marginEnd="@dimen/home_activity_oval_constraint_layout_margin_end"
				android:layout_marginTop="@dimen/home_activity_oval_constraint_layout_margin_top"
				android:background="@drawable/home_activity_oval_constraint_layout_background"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="56dp"/>
		</android.support.constraint.ConstraintLayout>

		<TextView
			android:id="@+id/good_evening_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/home_activity_good_evening_text_view_margin_start"
			android:layout_marginTop="@dimen/home_activity_good_evening_text_view_margin_top"
			android:fontFamily="@font/font_inter_regular"
			android:gravity="start"
			android:text="@string/home_activity_good_evening_text_view_text"
			android:textColor="#3A3A3A"
			android:textSize="@dimen/home_activity_good_evening_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/icon_shape_image_view"
			tools:layout_editor_absoluteX="30dp"
			tools:layout_editor_absoluteY="156dp"/>

		<TextView
			android:id="@+id/amanda_james_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/home_activity_amanda_james_text_view_margin_start"
			android:layout_marginTop="@dimen/home_activity_amanda_james_text_view_margin_top"
			android:fontFamily="@font/font_inter_bold"
			android:gravity="start"
			android:text="@string/home_activity_amanda_james_text_view_text"
			android:textColor="#3A3A3A"
			android:textSize="@dimen/home_activity_amanda_james_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/good_evening_text_view"
			tools:layout_editor_absoluteX="30dp"
			tools:layout_editor_absoluteY="194dp"/>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/search_bar_constraint_layout"
			android:layout_width="@dimen/home_activity_search_bar_constraint_layout_width"
			android:layout_height="@dimen/home_activity_search_bar_constraint_layout_height"
			android:layout_marginTop="@dimen/home_activity_search_bar_constraint_layout_margin_top"
			android:background="@drawable/home_activity_search_bar_constraint_layout_background"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/amanda_james_text_view"
			tools:layout_editor_absoluteX="25dp"
			tools:layout_editor_absoluteY="279dp">

			<EditText
				android:id="@+id/want_to_search_anyth_edit_text"
				android:layout_width="@dimen/home_activity_want_to_search_anyth_edit_text_width"
				android:layout_height="@dimen/home_activity_want_to_search_anyth_edit_text_height"
				android:layout_marginStart="@dimen/home_activity_want_to_search_anyth_edit_text_margin_start"
				android:background="@color/home_activity_want_to_search_anyth_edit_text_background_color"
				android:fontFamily="@font/font_inter_regular"
				android:gravity="start|center_vertical"
				android:hint="@string/home_activity_want_to_search_anyth_edit_text_hint"
				android:inputType="text"
				android:maxLines="1"
				android:textColor="#808A959E"
				android:textColorHint="@color/color_hint_text"
				android:textSize="@dimen/home_activity_want_to_search_anyth_edit_text_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="27dp"
				tools:layout_editor_absoluteY="23dp"/>

			<ImageView
				android:id="@+id/icon_shape_two_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/home_activity_icon_shape_two_image_view_margin_end"
				android:scaleType="center"
				android:src="@drawable/icon_shape_2"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="303dp"
				tools:layout_editor_absoluteY="23dp"/>
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/tab_link_constraint_layout"
			android:layout_width="@dimen/home_activity_tab_link_constraint_layout_width"
			android:layout_height="@dimen/home_activity_tab_link_constraint_layout_height"
			android:layout_marginStart="@dimen/home_activity_tab_link_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/home_activity_tab_link_constraint_layout_margin_top"
			android:background="#33FF7979"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/search_bar_constraint_layout"
			tools:layout_editor_absoluteX="25dp"
			tools:layout_editor_absoluteY="391dp">

			<TextView
				android:id="@+id/ingredients_or_les_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/home_activity_ingredients_or_les_text_view_margin_start"
				android:fontFamily="@font/font_inter_bold"
				android:gravity="center"
				android:text="@string/home_activity_ingredients_or_les_text_view_text"
				android:textColor="@color/home_activity_ingredients_or_les_text_view_text_color"
				android:textSize="@dimen/home_activity_ingredients_or_les_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="20dp"
				tools:layout_editor_absoluteY="15dp"/>

			<ImageView
				android:id="@+id/icon_path_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/home_activity_icon_path_image_view_margin_end"
				android:scaleType="center"
				android:src="@drawable/icon_path"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="179dp"
				tools:layout_editor_absoluteY="18dp"/>
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/photo_grid_constraint_layout"
			android:layout_width="@dimen/home_activity_photo_grid_constraint_layout_width"
			android:layout_height="@dimen/home_activity_photo_grid_constraint_layout_height"
			android:layout_marginTop="@dimen/home_activity_photo_grid_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tab_link_constraint_layout"
			tools:layout_editor_absoluteX="25dp"
			tools:layout_editor_absoluteY="463dp">

			<ImageView
				android:id="@+id/bitmap_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="centerCrop"
				android:src="@drawable/bitmap_5"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp"/>

			<ImageView
				android:id="@+id/bitmap_two_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/bitmap_3"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="248dp"
				tools:layout_editor_absoluteY="0dp"/>

			<ImageView
				android:id="@+id/bitmap_three_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/bitmap"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="248dp"
				tools:layout_editor_absoluteY="122dp"/>

			<ImageView
				android:id="@+id/bitmap_four_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/bitmap_2"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="243dp"/>

			<ImageView
				android:id="@+id/bitmap_five_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="centerCrop"
				android:src="@drawable/bitmap_4"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				tools:layout_editor_absoluteX="120dp"
				tools:layout_editor_absoluteY="243dp"/>
		</android.support.constraint.ConstraintLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="70dp"
			app:layout_constraintTop_toBottomOf="@+id/photo_grid_constraint_layout"
			/>
	</android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

